spec: Update GUI template
- Update GUI template to reflect the updated functional requirements
- Add new rules to Makefile for automatic SVG -> PNG conversion
- Include image of GUI explaining the sections of the main view

--- a/Documentation/Pflichtenheft/Makefile
+++ b/Documentation/Pflichtenheft/Makefile
@@ -1,16 +1,26 @@
 NAME=pflichtenheft
 
+GUI_INPUT_DIR = ./image/gui
+GUI_OUTPUT_DIR = ./build/gui
+
+GUI_INPUT_FILES := $(wildcard $(GUI_INPUT_DIR)/*.svg)
+GUI_OUTPUT_FILES := $(patsubst $(GUI_INPUT_DIR)/%.svg,$(GUI_OUTPUT_DIR)/%.png,$(GUI_INPUT_FILES))
+
 default: $(NAME).pdf
 
 all: $(NAME).pdf
 
-build/%.pdf: %.tex *.sty
+build/%.pdf: %.tex *.sty $(GUI_OUTPUT_FILES)
 	mkdir -p build
 	latexmk -pdf -g -f -auxdir=build -outdir=build $<
 
 %.pdf: build/%.pdf
 	mv $< $@ # atomic!
 	cp $@ $<
+
+$(GUI_OUTPUT_DIR)/%.png: $(GUI_INPUT_DIR)/%.svg
+	mkdir -p $(GUI_OUTPUT_DIR)
+	convert -density 300 $< $@
 
 .PHONY: show clean distclean
 
