spec: Add GUI draft for "opened a file"
- Add GUI draft and description for a screen after a file has been loaded
- Fix Makefile: make would delete all generated PNGs because they are intermediate files; this was resolved by adding the ".PRECIOUS" rule
- Change image inclusion format: we don't want the images to float around => we are not going to use a floating environment (\figure)

--- a/Documentation/Pflichtenheft/Makefile
+++ b/Documentation/Pflichtenheft/Makefile
@@ -6,6 +6,10 @@ GUI_OUTPUT_DIR = ./build/gui
 GUI_INPUT_FILES := $(wildcard $(GUI_INPUT_DIR)/*.svg)
 GUI_OUTPUT_FILES := $(patsubst $(GUI_INPUT_DIR)/%.svg,$(GUI_OUTPUT_DIR)/%.png,$(GUI_INPUT_FILES))
 
+# Prevents make from automatically the generated PNGs after every build
+# It usually does, because they are "intermediate files"
+.PRECIOUS: $(GUI_OUTPUT_FILES)
+
 default: $(NAME).pdf
 
 all: $(NAME).pdf
