--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'application'
+apply plugin: 'eclipse'
 
 version = 1.0
 mainClassName = 'edu.kit.ipd.pp.viper.view.MainWindow'
@@ -14,6 +15,6 @@ targetCompatibility = 1.8
 dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.fifesoft:rsyntaxtextarea:2.6.1'
-    compile 'org.apache.xmlgraphics:batik:1.10'
+    compile 'org.apache.xmlgraphics:batik-all:1.10'
     compile 'guru.nidi:graphviz-java:0.5.2'
 }
