view: Add menu bar to window
It was necessary to introduce a new class called CheckBoxMenuItem to be
able to use the LanguageManager correctly

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -1,2 +1,22 @@
+menu_file = Datei
+menu_new = Neu
+menu_open = Öffnen
 menu_save = Speichern
 menu_saveas = Speichern Unter...
+menu_recent = Zuletzt geöffnet
+menu_exit = Beenden
+
+menu_program = Programm
+menu_parse = Parsen
+menu_format = Formatieren
+
+menu_export = Export
+menu_export_png = PNG exportieren
+menu_export_svg = SVG exportieren
+menu_export_tikz = TikZ exportieren
+
+menu_settings = Einstellungen
+menu_stdlib = Standardbibliothek de-/aktivieren
+menu_language = Sprache
+menu_language_de = Deutsch
+menu_language_en = Englisch
