view: Implement ToolBar

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -20,3 +20,11 @@ menu_stdlib = Standardbibliothek de-/aktivieren
 menu_language = Sprache
 menu_language_de = Deutsch
 menu_language_en = Englisch
+
+tooltip_new = Neue Datei anlegen
+tooltip_open = Datei öffnen
+tooltip_save = Datei speichern
+tooltip_parse = Programm parsen
+tooltip_format = Programm formatieren
+tooltip_step = Nächster Schritt
+tooltip_next = Nächste Lösung
