view: Change 'toggle stdlib' menu texts

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -16,7 +16,7 @@ menu_export_svg = SVG exportieren
 menu_export_tikz = TikZ exportieren
 
 menu_settings = Einstellungen
-menu_stdlib = Standardbibliothek de-/aktivieren
+menu_stdlib = Standardbibliothek aktivieren
 menu_language = Sprache
 menu_language_de = Deutsch
 menu_language_en = Englisch
