code: Fix JaCoCo integration to be compatible with Gradle 5.0
Using 'html.destination' with a string is deprecated and produces the
following warning:

  The ConfigurableReport.setDestination(Object) method has been deprecated and is scheduled to be removed in Gradle 5.0. Please use the method ConfigurableReport.setDestination(File) instead.

Instead, use Gradle's built-in file() method for destination
configuration to be fully 5.0 compatible.

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ jacocoTestReport {
     reports {
         xml.enabled true
         csv.enabled false
-        html.destination "${buildDir}/reports/coverage"
+        html.enabled true
+        html.destination file("${buildDir}/reports/coverage")
     }
 }
 
