view: Implement input field

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -28,3 +28,5 @@ tooltip_parse = Programm parsen
 tooltip_format = Programm formatieren
 tooltip_step = Nächster Schritt
 tooltip_next = Nächste Lösung
+
+button_send = Senden
