--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -2,7 +2,7 @@ menu_file = Datei
 menu_new = Neu
 menu_open = Öffnen
 menu_save = Speichern
-menu_saveas = Speichern Unter...
+menu_saveas = Speichern unter...
 menu_recent = Zuletzt geöffnet
 menu_exit = Beenden
 
@@ -28,3 +28,28 @@ tooltip_parse = Programm parsen
 tooltip_format = Programm formatieren
 tooltip_step = Nächster Schritt
 tooltip_next = Nächste Lösung
+
+yes = Ja
+no = Nein
+cancel = Abbrechen
+
+confirm_new = Es existieren ungespeicherte Änderungen. Sollen diese gespeichert werden?
+confirm_new_title = Neu
+
+png_files = PNG-Dateien (.png)
+svg_files = SVG-Dateien (.svg)
+tikz_files = TikZ-Dateien (.tikz)
+prolog_files = Prolog-Dateien (.pl)
+
+open_file_success = Datei erfolgreich geöffnet
+save_file_success = Datei erfolgreich gespeichert
+export_file_success = Datei erfolgreich exportiert
+editor_formatted = Quelltext erfolgreich formatiert
+
+open_file_error = Fehler beim Öffnen der Datei
+save_file_error = Fehler beim Speichern der Datei
+export_file_error = Fehler beim Exportieren der Datei
+export_unsupported_format = Fehler beim Exportieren der Datei, Format wird nicht unterstützt
+parser_error = Fehler beim Parsen des Quelltexts
+
+solution_found = Lösung gefunden
