controller: Fix parsing output

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -50,6 +50,8 @@ open_file_error = Fehler beim Öffnen der Datei
 save_file_error = Fehler beim Speichern der Datei
 export_file_error = Fehler beim Exportieren der Datei
 export_unsupported_format = Fehler beim Exportieren der Datei, Format wird nicht unterstützt
+
+parser_success = Quelltext erfolgreich geparst
 parser_error = Fehler beim Parsen des Quelltexts
 
 solution_found = Lösung gefunden
