--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -58,4 +58,12 @@ solution_found = Lösung gefunden
 
 button_send = Senden
 button_step = Nächster Schritt
-‚
+
+position = nach %s in Zeile %d, Spalte %d
+illegal_char = Ungültiger Charakter
+operator_not_recognized = Operator %s nicht erkannt
+expected_instead = Erwartete %s anstelle von '%s'
+goal_not_supported = Ziel nicht unterstützt
+term = Term
+functor = Funktor
+unsupported_lists = Listen werden nicht unterstützt
