interpreterman: Move parsing to interpreter manager

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -53,8 +53,12 @@ export_unsupported_format = Fehler beim Exportieren der Datei, Format wird nicht
 
 parser_success = Quelltext erfolgreich geparst
 parser_error = Fehler beim Parsen des Quelltexts
+parser_query_error = Fehler beim Parsen der Abfrage
+
+visualisation_started = Visualisierung wurde gestartet
 
 solution_found = Lösung gefunden
+no_more_solutions = Keine weiteren Lösungen.
 
 button_send = Senden
 button_step = Nächster Schritt
