view: Show "yes" message when a query without variables has been fulfilled

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -58,6 +58,7 @@ parser_query_error = Fehler beim Parsen der Abfrage
 visualisation_started = Visualisierung wurde gestartet
 
 solution_found = Lösung gefunden
+solution_yes = ja
 no_more_solutions = Keine weiteren Lösungen.
 
 button_send = Senden
