view: Translate startup message in console

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -56,6 +56,7 @@ parser_error = Fehler beim Parsen des Quelltexts
 parser_query_error = Fehler beim Parsen der Abfrage
 
 visualisation_started = Visualisierung wurde gestartet
+viper_started = VIPER %s bereit
 
 solution_found = Lösung gefunden
 solution_yes = ja
