controller: Give Exit Save Dialog a proper title

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -35,6 +35,7 @@ cancel = Abbrechen
 
 confirm_new = Es existieren ungespeicherte Änderungen. Sollen diese gespeichert werden?
 confirm_new_title = Neu
+confirm_close_title = Schließen
 
 png_files = PNG-Dateien (.png)
 svg_files = SVG-Dateien (.svg)
