interpreter: Implement unification goals

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -73,3 +73,5 @@ goal_not_supported = Ziel nicht unterstützt
 term = Term
 functor = Funktor
 unsupported_lists = Listen werden nicht unterstützt
+
+unification = Unifikation
