--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -28,6 +28,7 @@ tooltip_parse = Programm parsen
 tooltip_format = Programm formatieren
 tooltip_step = Nächster Schritt
 tooltip_next = Nächste Lösung
+tooltip_cancel = Abbrechen
 
 yes = Ja
 no = Nein
