view: Add message for already formatted source code

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -46,6 +46,7 @@ open_file_success = Datei erfolgreich geöffnet
 save_file_success = Datei erfolgreich gespeichert
 export_file_success = Datei erfolgreich exportiert
 editor_formatted = Quelltext erfolgreich formatiert
+editor_already_formatted = Quelltext bereits formatiert
 
 open_file_error = Fehler beim Öffnen der Datei
 save_file_error = Fehler beim Speichern der Datei
