--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -26,6 +26,7 @@ tooltip_open = Datei öffnen
 tooltip_save = Datei speichern
 tooltip_parse = Programm parsen
 tooltip_format = Programm formatieren
+tooltip_stepback = Vorheriger Schritt
 tooltip_step = Nächster Schritt
 tooltip_next = Nächste Lösung
 tooltip_cancel = Abbrechen
