code: Change translation from recently opened to recently used

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -3,7 +3,7 @@ menu_new = Neu
 menu_open = Öffnen
 menu_save = Speichern
 menu_saveas = Speichern unter...
-menu_recent = Zuletzt geöffnet
+menu_recent = Zuletzt genutzt
 menu_exit = Beenden
 
 menu_program = Programm
