interpreter: Implement arithmetic ("is") goals

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -62,6 +62,9 @@ parser_query_error = Fehler beim Parsen der Abfrage
 visualisation_started = Visualisierung wurde gestartet
 viper_started = VIPER %s bereit
 
+arithmetic_unset_variable = Unbelegte Variable: %s
+arithmetic_unsupported_term = Term nicht unterstützt: %s
+
 solution_found = Lösung gefunden
 solution_yes = ja
 no_more_solutions = Keine weiteren Lösungen.
