interpreter: Implement comparison goals

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -64,6 +64,8 @@ viper_started = VIPER %s bereit
 
 arithmetic_unset_variable = Unbelegte Variable: %s
 arithmetic_unsupported_term = Term nicht unterstützt: %s
+arithmetic_comparison_failed = falsch
+arithmetic_comparison_succeeded = wahr
 
 solution_found = Lösung gefunden
 solution_yes = ja
