parser: Add parsing of lists

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -79,6 +79,8 @@ illegal_char = Ungültiger Charakter
 operator_not_recognized = Operator %s nicht erkannt
 expected_instead = Erwartete %s anstelle von '%s'
 expected_goalrest = Erwartete 'is', '=' oder arithmetischen Vergleich anstelle von '%s'
+expected_list = Erwartete Liste anstelle von '%s'
+expected_list_rest = Erwartete Listenrest anstelle von '%s'
 goal_not_supported = Ziel nicht unterstützt
 term = Term
 functor = Funktor
