view: Unify LanguageKeys

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -13,27 +13,24 @@ menu_format = Formatieren
 menu_export = Export
 menu_export_png = PNG exportieren
 menu_export_svg = SVG exportieren
-menu_export_tikz = TikZ exportieren
 
 menu_settings = Einstellungen
 menu_stdlib = Standardbibliothek aktivieren
 menu_language = Sprache
-menu_language_de = Deutsch
-menu_language_en = Englisch
 
 tooltip_new = Neue Datei anlegen
 tooltip_open = Datei öffnen
 tooltip_save = Datei speichern
 tooltip_parse = Programm parsen
 tooltip_format = Programm formatieren
-tooltip_stepback = Vorheriger Schritt
-tooltip_step = Nächster Schritt
-tooltip_next = Nächste Lösung
+tooltip_previousstep = Vorheriger Schritt
+tooltip_nextstep = Nächster Schritt
+tooltip_nextsolution = Nächste Lösung
 tooltip_cancel = Abbrechen
 
-yes = Ja
-no = Nein
-cancel = Abbrechen
+dialog_yes = Ja
+dialog_no = Nein
+dialog_cancel = Abbrechen
 
 confirm_new = Es existieren ungespeicherte Änderungen. Sollen diese gespeichert werden?
 confirm_new_title = Neu
@@ -80,8 +77,7 @@ operator_not_recognized = Operator %s nicht erkannt
 expected_instead = Erwartete %s anstelle von '%s'
 expected_goalrest = Erwartete 'is', '=' oder arithmetischen Vergleich anstelle von '%s'
 goal_not_supported = Ziel nicht unterstützt
+
 term = Term
 functor = Funktor
-unsupported_lists = Listen werden nicht unterstützt
-
 unification = Unifikation
