qa: Add about menu item and functionality

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -18,6 +18,9 @@ menu_settings = Einstellungen
 menu_stdlib = Standardbibliothek aktivieren
 menu_language = Sprache
 
+menu_help = Hilfe
+menu_about = Über
+
 tooltip_new = Neue Datei anlegen
 tooltip_open = Datei öffnen
 tooltip_save = Datei speichern
@@ -27,6 +30,10 @@ tooltip_previousstep = Vorheriger Schritt
 tooltip_nextstep = Nächster Schritt
 tooltip_nextsolution = Nächste Lösung
 tooltip_cancel = Abbrechen
+
+about_name = VIPER Prolog Education Runtime
+about_authors = Entwickelt von:
+about_libraries = Unter Benutzung von:
 
 dialog_yes = Ja
 dialog_no = Nein
