qa: Add popup for showing the standard library code

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -20,6 +20,7 @@ menu_language = Sprache
 
 menu_help = Hilfe
 menu_about = Über
+menu_show_standard = Standardbibliothek anzeigen
 
 tooltip_new = Neue Datei anlegen
 tooltip_open = Datei öffnen
@@ -90,3 +91,4 @@ goal_not_supported = Ziel nicht unterstützt
 term = Term
 functor = Funktor
 unification = Unifikation
+standard_library = Standardbibliothek
