qa: Add console input field placeholder text, fix missing disable on new file

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -32,6 +32,8 @@ tooltip_nextstep = Nächster Schritt
 tooltip_nextsolution = Nächste Lösung
 tooltip_cancel = Abbrechen
 
+input_hint = Abfrage eingeben...
+
 about_name = VIPER Interactive Prolog Education Runtime
 about_authors = Entwickelt von:
 about_libraries = Unter Benutzung von:
