qa: Add visualisation placeholder

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -33,6 +33,7 @@ tooltip_nextsolution = Nächste Lösung
 tooltip_cancel = Abbrechen
 
 input_hint = Abfrage eingeben...
+visualisation_hint = Quellcode parsen und eine\nAbfrage eingeben um die\nVisualisierung zu starten...
 
 about_name = VIPER Interactive Prolog Education Runtime
 about_authors = Entwickelt von:
