--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ targetCompatibility = 1.8
 
 dependencies {
     testCompile 'junit:junit:4.12'
+    testCompile("org.assertj:assertj-swing:3.8.0")
     compile 'com.fifesoft:rsyntaxtextarea:2.6.1'
     compile 'org.apache.xmlgraphics:batik-swing:1.10'
     compile 'guru.nidi:graphviz-java:0.5.2'
