qa: Add advanced zoom settings, remove visualisation zoom buttons

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -31,6 +31,14 @@ tooltip_previousstep = Vorheriger Schritt
 tooltip_nextstep = Nächster Schritt
 tooltip_nextsolution = Nächste Lösung
 tooltip_cancel = Abbrechen
+tooltip_zoom_in = Hereinzoomen
+tooltip_zoom_out = Herauszoomen
+
+zoom_target_visualisation = Visualisierung
+zoom_target_editor = Editor
+zoom_target_console = Konsole
+zoom_target_editor_console = Editor & Konsole
+zoom_target_all = Alles
 
 input_hint = Neue Abfrage eingeben...
 visualisation_hint = Quellcode parsen und eine\nAbfrage eingeben, um die\nVisualisierung zu starten...
