qa: Add zoom label, also add reset functionality in menu bar

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -17,6 +17,7 @@ menu_export_svg = SVG exportieren
 menu_settings = Einstellungen
 menu_stdlib = Standardbibliothek aktivieren
 menu_language = Sprache
+menu_reset_zoom = Zoom zurücksetzen
 
 menu_help = Hilfe
 menu_about = Über
