qa: Add welcome menu popup

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -96,3 +96,9 @@ term = Term
 functor = Funktor
 unification = Unifikation
 standard_library = Standardbibliothek
+help = Hilfe
+
+tab_introduction = Einführung
+tab_editor = Editor
+tab_console = Konsole
+tab_visualisation = Visualisierung
