--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -96,9 +96,33 @@ term = Term
 functor = Funktor
 unification = Unifikation
 standard_library = Standardbibliothek
-help = Hilfe
+welcome = Willkommen
 
 tab_introduction = Einführung
 tab_editor = Editor
 tab_console = Konsole
 tab_visualisation = Visualisierung
+
+welcome_introduction =\
+<html>\
+<b>Test</b>\
+<b>Test</b>\
+</html>
+
+welcome_editor =\
+<html>\
+<b>Test</b>\
+<b>Test</b>\
+</html>
+
+welcome_console =\
+<html>\
+<b>Test</b>\
+<b>Test</b>\
+</html>
+
+welcome_visualisation =\
+<html>\
+<b>Test</b>\
+<b>Test</b>\
+</html>
