qa: Finish draft of english welcome popup

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -105,24 +105,20 @@ tab_visualisation = Visualisierung
 
 welcome_introduction =\
 <html>\
-<b>Test</b>\
-<b>Test</b>\
+<b>Wird ausgefüllt, sobald englische Version OK</b>\
 </html>
 
 welcome_editor =\
 <html>\
-<b>Test</b>\
-<b>Test</b>\
+<b>Wird ausgefüllt, sobald englische Version OK</b>\
 </html>
 
 welcome_console =\
 <html>\
-<b>Test</b>\
-<b>Test</b>\
+<b>Wird ausgefüllt, sobald englische Version OK</b>\
 </html>
 
 welcome_visualisation =\
 <html>\
-<b>Test</b>\
-<b>Test</b>\
+<b>Wird ausgefüllt, sobald englische Version OK</b>\
 </html>
