qa: Finish drafting the english version of the welcome popup

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -102,6 +102,8 @@ tab_introduction = Einführung
 tab_editor = Editor
 tab_console = Konsole
 tab_visualisation = Visualisierung
+tab_interpreter = Interpreter
+tab_extras = Extras
 
 welcome_introduction =\
 <html>\
@@ -119,6 +121,16 @@ welcome_console =\
 </html>
 
 welcome_visualisation =\
+<html>\
+<b>Wird ausgefüllt, sobald englische Version OK</b>\
+</html>
+
+welcome_interpreter =\
+<html>\
+<b>Wird ausgefüllt, sobald englische Version OK</b>\
+</html>
+
+welcome_extras =\
 <html>\
 <b>Wird ausgefüllt, sobald englische Version OK</b>\
 </html>
