qa: Translate welcome popup to English

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -106,31 +106,171 @@ tab_interpreter = Interpreter
 tab_extras = Extras
 
 welcome_introduction =\
-<html>\
-<b>Wird ausgefüllt, sobald englische Version OK</b>\
+<html><div style='text-align: center;'>\
+  <b>Willkommen im VIPER Prolog Education Runtime</b><br\>\
+  Dies ist eine kurze Einführung in die Umgebung.<br\><br\>\
+  Zusätzliche Features werden in den entsprechenden Abschnitten erläutert.<br\>\
+  Dieses Popup kann jederzeit über den Hilfe > Willkommen Eintrag in der Menüleiste geöffnet werden.<br\>\
+  Um die Sprache zu ändern, nutzen Sie das Sprachmenü unter Einstellungen > Sprache.</div><br\><br\>\
+  <b>Grundlegende Arbeitsweise:</b>\
+<ol>\
+  <li>Geben Sie Ihren Prolog-Quelltext in den Editor ein</li>\
+  <li>Parsen sie den Quelltext durch Betätigen des Menüleisten-Eintrags oder der Schaltfläche in der Werkzeugleiste</li>\
+  <li>Sollte der Quelltext valide sein, so wird das Eingabefeld freigegeben und Sie können eine Abfrage eingeben;<br\>\
+      invalider Quelltext erzeugt eine Fehlermeldung im Ausgabebereich der Konsole</li>\
+  <li>Bestätigen Sie Ihre Abfrage durch Betätigen der Enter-Taste oder der Senden-Schaltfläche</li>\
+  <li>Steuern Sie die Interpretation durch Betätigen der entsprechenden Schaltflächen in der Werkzeugleiste<br\></li>\
+      valide Abfragen generieren automatisch eine Visualisierung, welche im Visualisierungsbereich angezeigt werden\
+</ol>\
 </html>
 
 welcome_editor =\
 <html>\
-<b>Wird ausgefüllt, sobald englische Version OK</b>\
+<div style='text-align: center;'><b>Nutzung des eingebauten Text-Editors</b></div>\
+<table style="width:100%">\
+<tr>\
+  <th style="text-align:left">Funktion</th>\
+  <th style="text-align:left">Menüeintrag</th>\
+  <th style="text-align:left">Shortcut</th>\
+  <th style="text-align:left">Schaltfläche (Tooltip)</th>\
+</tr>\
+\
+<tr>\
+  <td>Neue Datei anlegen</th>\
+  <td>Datei > Neu</th>\
+  <td>STRG + N</th>\
+  <td>Neue Datei anlegen</th>\
+</tr>\
+\
+<tr>\
+  <td>Datei öffnen</th>\
+  <td>Datei > Öffnen</th>\
+  <td>STRG + O</th>\
+  <td>Datei öffnen</th>\
+</tr>\
+\
+<tr>\
+  <td>Datei speichern</th>\
+  <td>Datei > Speichern</th>\
+  <td>STRG + S</th>\
+  <td>Datei speichern</th>\
+</tr>\
+\
+<tr>\
+  <td>Als neue Datei speichern</th>\
+  <td>Datei > Speichern als...</th>\
+  <td>STRG + Shift + S</th>\
+  <td>Keiner</th>\
+</tr>\
+\
+<tr>\
+  <td>Zuletzt genutzte Datei öffnen</th>\
+  <td>Datei > Zuletzt genutzt > ...</th>\
+  <td>Keiner</th>\
+  <td>Keiner</th>\
+</tr>\
+\
+<tr>\
+  <td>Quelltext formatieren</th>\
+  <td>Programm > Formatieren</th>\
+  <td>STRG + F</th>\
+  <td>Programm formatieren</th>\
+</tr>\
+\
+<tr>\
+  <td>Textgröße skalieren</th>\
+  <td>Keiner</th>\
+  <td>STRG + +/-/Mausrad</th>\
+  <td>Text-Zoom vergrößern/verkleinern</th>\
+</tr>\
+\
+<tr>\
+  <td>Textgröße zurücksetzen</th>\
+  <td>Einstellungen > Text-Zoom zurücksetzen</th>\
+  <td>Keiner</th>\
+  <td>Keiner</th>\
+</tr>\
+\
+<tr>\
+  <td>Quelltext parsen</th>\
+  <td>Programm > Parsen</th>\
+  <td>STRG + P</th>\
+  <td>Programm parsen</th>\
+</tr>\
+</table>\
+<\br>\
+<div style='text-align: center;'>Anmerkung: Es kann nur valider Quelltext formatiert werden.</div>\
 </html>
 
 welcome_console =\
 <html>\
-<b>Wird ausgefüllt, sobald englische Version OK</b>\
+<div style='text-align: center;'><b>Nutzung der eingebauten Konsole</b></div><br\>\
+<b>Eingabefeld:</b>\
+<ul>\
+  <li>Das Eingabefeld wird freigegeben, sobald valider Quelltext geparst wurde</li>\
+  <li>Sobald eine Abfrage eingegeben wurde, nutzen Sie die Enter-Taste oder die Senden-Schaltfläche,<br\>\
+      um die Interpretation zu starten</li>\
+  <li>Bereits gestellte Abfragen werden in einem Verlauf gespeichert;<br\>\
+      solang das Eingabefeld fokussiert ist können Sie den Verlauf mit den Pfeiltasten navigieren</li>\
+</ul>\
+<b>Ausgabebereich:</b>\
+<ul>\
+  <li>Der Ausgabebereich hat drei verschiedene Ausgabetypen: Info, Fehler und Erfolg</li>\
+  <li>Info: Schwarzer Text, in erster Linie Informationen zu Dateioperationen</li>\
+  <li>Fehler: Roter Text, meist verursacht durch Fehler beim Parsen oder Dateioperationen</li>\
+  <li>Erfolg: Grüner Text, genutzt für erfolgreiche Unifikationen bei der Interpretation</li>\
+</ul>\
 </html>
 
 welcome_visualisation =\
 <html>\
-<b>Wird ausgefüllt, sobald englische Version OK</b>\
+<div style='text-align: center;'><b>Nutzung der Visualisierung</b><br\>\
+  Bei der Interpretation wird automatisch ein Graph im Visualisierungsfenster angezeigt,<br\>\
+  der den aktuellen Interpretationszustand darstellt.</div><br\>\
+<b>Navigation:</b>\
+<ul>\
+  <li>Bewegung innerhalb der Visualisierung erfolgt durch das Bewegen der Maus bei gedrückter linker Maustaste</li>\
+  <li>Zoomen innerhalb der Visualisierung erfolgt durch das Mausrad oder die Plus-/Minus-Schaltflächen</li>\
+</ul>\
+<\br>\
+<b>Export:</b>\
+<ul>\
+  <li>Die Visualisierung kann über die Menüeinträge des Export-Menüs exportiert werden</li>\
+  <li>Exportierte Bilddateien enthalten immer den gesamten Graph, nicht den angezeigten Ausschnitt</li>\
+</ul>\
 </html>
 
 welcome_interpreter =\
 <html>\
-<b>Wird ausgefüllt, sobald englische Version OK</b>\
+<div style='text-align: center;'><b>Nutzung des Interpreters</b></div><br\>\
+<b>Einzelschritte vorwärts und rückwärts sowie Schreiten zur Lösung:</b>\
+<ul>\
+  <li>Die Interpretation beginnt automatisch nach dem Stellen einer validen Abfrage</li>\
+  <li>Schrittoperationen können über die Schaltflächen der Werkzeugleiste ausgeführt werden</li>\
+  <li>Die Schaltflächen für den nächsten und den vorherigen Schritt lassen den Interpreter jeweils<\br>\
+      einen einzelnen Schritt in die entsprechende Richtung durchführen</li>\
+  <li>Die Schaltfläche für die nächste Lösung lässt den Interpreter nach der nächsten Lösung suchen</li>\
+  <li>Die Suche nach der nächsten Lösung kann jederzeit über die Abbrechen-Schaltfläche unterbrochen werden;<\br>\
+      der Interpreter beendet hierbei den aktuellen Schritt und hält daraufhin an</li>\
+</ul>\
+<\br>\
+<div style='text-align: center;'>Um eine neue Interpretation zu starten, senden Sie einfach eine neue Abfrage.<\br>\
+Um die Interpretation neu zu starten, schreiten Sie zurück zum Beginn oder stellen Sie die Abfrage erneut.</div><br\>\
 </html>
 
 welcome_extras =\
 <html>\
-<b>Wird ausgefüllt, sobald englische Version OK</b>\
+<div style='text-align: center;'><b>Extras</b></div><br\>\
+<b>Eingebaute Standardbibliothek:</b>\
+<ul>\
+  <li>VIPER bietet eine Standardbibliothek mit oft genutzten, bereits definierten Regeln</li>\
+  <li>Um die Standardbibliothek zu de-/aktivieren, nutzen Sie den Einstellungen > Standardbibliothek aktivieren<\br>\
+      Eintrag in der Menüleiste</li>\
+  <li>Um den Inhalt der Standardbibliothek einzusehen, nutzen Sie den Hilfe > Standardbibliothek anzeigen<\br>\
+      Eintrag in der Menüleiste</li>\
+</ul>\
+<b>Sprachwahl:</b>\
+<ul>\
+  <li>Die genutzte Sprache kann jederzeit über den Einstellungen > Sprache Eintrag in der Menüleiste gewechselt werden</li>\
+</ul>\
 </html>
