qa: Fix GitLab runner to support any Gradle version

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ jar:
   artifacts:
     name: "Executable JAR for $CI_COMMIT_REF_NAME"
     paths:
-      - ${CI_PROJECT_DIR}/build/libs/viper.jar
+      - ${CI_PROJECT_DIR}/build/libs/*.jar
     when: always
     expire_in: 2 weeks
 
