qa: Fix manual text overflow

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -115,7 +115,7 @@ manual_manual =\
 <b>Grundlegende Arbeitsweise:</b>\
 <ol>\
   <li>Geben Sie Ihren Prolog-Quelltext in den Editor ein</li>\
-  <li>Parsen sie den Quelltext durch Betätigen des Menüleisten-Eintrags<br\>\
+  <li>Parsen Sie den Quelltext durch Betätigen des Menüleisten-Eintrags<br\>\
       oder der Schaltfläche in der Werkzeugleiste</li>\
   <li>Sollte der Quelltext valide sein, so wird das Eingabefeld freigegeben<br\>\
       und Sie können eine Abfrage eingeben. Invalider Quelltext erzeugt eine<br\>\
@@ -130,7 +130,7 @@ manual_manual =\
   <li>Der Ausgabebereich hat drei verschiedene Ausgabetypen: Info, Fehler und Erfolg</li>\
   <li>Info: Schwarzer Text, Informationen z.B zu Dateioperationen</li>\
   <li>Fehler: Roter Text, meist verursacht durch Fehler beim Parsen oder Dateioperationen</li>\
-  <li>Erfolg: Grüner Text, genutzt für erfolgreiche Unifikationen bei der Interpretation</li>\
+  <li>Erfolg: Grüner Text, genutzt für erfolgreiche Resultate der Interpretation</li>\
 </ul>\
 </html>\
 
@@ -143,15 +143,17 @@ manual_controls =\
   </ul>\
   <b>Navigation der Visualisierung:</b>\
     <ul>\
-      <li>Bewegung innerhalb der Visualisierung erfolgt durch das Bewegen der Maus bei gedrückter linker Maustaste</li>\
-      <li>Zoomen innerhalb der Visualisierung erfolgt durch das Mausrad oder die Plus-/Minus-Schaltflächen</li>\
+      <li>Bewegung innerhalb der Visualisierung erfolgt durch das Bewegen<br\>\
+          der Maus bei gedrückter linker Maustaste</li>\
+      <li>Zoomen innerhalb der Visualisierung erfolgt durch das Mausrad oder<br\>\
+          die Plus-/Minus-Schaltflächen</li>\
     </ul>\
   <b>Bedienung des Interpreters:</b>\
   <ul>\
-    <li>Die Schaltflächen für den nächsten und den vorherigen Schritt lassen den Interpreter jeweils \
+    <li>Die Schaltflächen für den nächsten und den vorherigen Schritt lassen den Interpreter jeweils<br\>\
         einen einzelnen Schritt in die entsprechende Richtung durchführen</li>\
     <li>Die Schaltfläche für die nächste Lösung lässt den Interpreter nach der nächsten Lösung suchen</li>\
-    <li>Die Suche nach der nächsten Lösung kann jederzeit über die Abbrechen-Schaltfläche unterbrochen werden. \
-        Der Interpreter beendet hierbei den aktuellen Schritt und hält daraufhin an</li>\
+    <li>Die Suche nach der nächsten Lösung kann jederzeit über die Abbrechen-Schaltfläche<br\>\
+        unterbrochen werden. Der Interpreter beendet hierbei den aktuellen Schritt und hält daraufhin an</li>\
   </ul>\
 </html>\
