qa: Add SLF4J nop binding as dependency
This will prevent the warning

SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See http://www.slf4j.org/codes.html#StaticLoggerBinder for further details.

logged to the console each time the program is started. Adding the slf4j-nop dependency only adds 3KB to the jar file size.

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile 'com.fifesoft:rsyntaxtextarea:2.6.1'
     compile 'org.apache.xmlgraphics:batik-swing:1.10'
     compile 'guru.nidi:graphviz-java:0.5.2'
+    compile 'org.slf4j:slf4j-nop:1.7.25'
 }
 
 test { finalizedBy jacocoTestReport }
