qa: Increase PrefMan and IntMan coverage to about 80% average

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -100,6 +100,7 @@ expected_goalrest = Erwartete 'is', '=' oder arithmetischen Vergleich anstelle v
 expected_list = Erwartete Liste anstelle von '%s'
 expected_list_rest = Erwartete Listenrest anstelle von '%s'
 goal_not_supported = Ziel nicht unterstützt
+no_knowledgebase_present = Keine KnowlegeBase vorhanden
 
 term = Term
 functor = Funktor
