qa: Print warning for rules that appear in both the given program and the stdlib

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -75,6 +75,7 @@ export_file_error = Fehler beim Exportieren der Datei
 export_unsupported_format = Fehler beim Exportieren der Datei, Format wird nicht unterstützt
 
 parser_success = Quelltext erfolgreich geparst
+conflicting_rules = Die folgende(n) Regel(n) sind bereits in der Standardbibliothek definiert: %s. Dies könnte zu nicht erwartetem Verhalten führen. Benennen Sie Ihre Regeln um oder deaktivieren Sie die Standardbibliothek.
 parser_error = Fehler beim Parsen des Quelltexts
 parser_query_error = Fehler beim Parsen der Abfrage
 
