--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -31,6 +31,7 @@ tooltip_format = Programm formatieren
 tooltip_previousstep = Vorheriger Schritt
 tooltip_nextstep = Nächster Schritt
 tooltip_nextsolution = Nächste Lösung
+tooltip_finishquery = Zum Ende der Abfrage springen
 tooltip_cancel = Abbrechen
 tooltip_zoom_in = Hereinzoomen
 tooltip_zoom_out = Herauszoomen
