qa: Add menu item to load sample programs shipped with VIPER

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -4,6 +4,7 @@ menu_open = Öffnen
 menu_save = Speichern
 menu_saveas = Speichern unter...
 menu_recent = Zuletzt genutzt
+menu_samples = Beispiel-Programme
 menu_exit = Beenden
 
 menu_program = Programm
