qa: Fix CommandZoomTest, add reset vis functionality to menu

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -17,7 +17,8 @@ menu_export_svg = SVG exportieren
 menu_settings = Einstellungen
 menu_stdlib = Standardbibliothek aktivieren
 menu_language = Sprache
-menu_reset_zoom = Text-Zoom zurücksetzen
+menu_reset_text_zoom = Text-Zoom zurücksetzen
+menu_reset_visualisation_zoom = Visualisierungs-Zoom zurücksetzen
 
 menu_help = Hilfe
 menu_about = Über
