qa: Show better message on a cut goal with no parent
If the query consists of a cut goal only, that goal does not have a parent.
After this commit, cuts without a parent have a special note on them instead of the default cut note.

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -83,6 +83,7 @@ parser_query_error = Fehler beim Parsen der Abfrage
 visualisation_started = Visualisierung wurde gestartet
 viper_started = VIPER %s bereit
 visualisation_cut_note = Backtracking zu diesem Teilziel<br />lässt %s fehlschlagen
+visualisation_cut_abort = Backtracking zu diesem Teilziel<br />bricht die Ausführung ab
 
 arithmetic_unset_variable = Unbelegte Variable: %s
 arithmetic_unsupported_term = Term nicht unterstützt: %s
