qa: Fix parser crashing when the first character is illegal

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -95,6 +95,7 @@ no_more_solutions = Keine weiteren Lösungen.
 button_send = Senden
 
 position = bei %s in Zeile %d, Spalte %d
+first_character = dem ersten Zeichen
 illegal_char = Ungültiger Charakter
 operator_not_recognized = Operator %s nicht erkannt
 expected_instead = Erwartete %s anstelle von '%s'
