qa: Apply checkstyle rules to model tests
Also enables the checkstyleTest for gradle and uses the flag -Xlint:unchecked for more compiler warnings.

--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,15 @@ jacocoTestReport {
 
 checkstyle {
     configFile = rootProject.file('checkstyle.xml')
-    checkstyleTest.enabled = false
+    checkstyleTest.enabled = true
+}
+
+compileJava {
+    options.compilerArgs << "-Xlint:unchecked"
+}
+
+compileTestJava {
+    options.compilerArgs << "-Xlint:unchecked"
 }
 
 jar {
