qa: Bump JaCoCo version to 0.8.2
This version ignores so-called synthetic classes by default.
These classes may be created by the Java compiler to handle switch statements but have nothing to do with the actual code.
See https://github.com/jacoco/jacoco/issues/660 for more information.

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
 
 test { finalizedBy jacocoTestReport }
 
+jacoco {
+    toolVersion = "0.8.2"
+}
+
 jacocoTestReport {
     group = "Reporting"
     reports {
