qa: Additions to manual
Added the finish query button to the manual, as well as a more detailed
description what the query can consist of

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -124,6 +124,8 @@ manual_manual =\
   <li>Sollte der Quelltext valide sein, so wird das Eingabefeld freigegeben<br\>\
       und Sie können eine Abfrage eingeben. Invalider Quelltext erzeugt eine<br\>\
       Fehlermeldung im Ausgabebereich der Konsole</li>\
+  <li>Eine Abfrage kann aus einem Ziel, mehreren durch Kommata getrennten Zielen<br\>\
+      sowie arithmetischen Zielen und dem "cut" Ziel bestehen.</li>\
   <li>Bestätigen Sie Ihre Abfrage durch Betätigen der Enter-Taste oder der Senden-Schaltfläche</li>\
   <li>Steuern Sie die Interpretation durch Betätigen der entsprechenden<br\>\
       Schaltflächen in der Werkzeugleiste. Valide Abfragen generieren automatisch eine<br\>\
