qa: Add text and translations for the finish query functionality

--- a/src/main/resources/translations.properties
+++ b/src/main/resources/translations.properties
@@ -159,7 +159,10 @@ manual_controls =\
     <li>Die Schaltflächen für den nächsten und den vorherigen Schritt lassen den Interpreter jeweils<br\>\
         einen einzelnen Schritt in die entsprechende Richtung durchführen</li>\
     <li>Die Schaltfläche für die nächste Lösung lässt den Interpreter nach der nächsten Lösung suchen</li>\
-    <li>Die Suche nach der nächsten Lösung kann jederzeit über die Abbrechen-Schaltfläche<br\>\
-        unterbrochen werden. Der Interpreter beendet hierbei den aktuellen Schritt und hält daraufhin an</li>\
+    <li>Die Schaltfläche für das Beenden der Abfrage lässt die Abfrage durchlaufen bis<br\>\
+    	keine weiteren Lösungen mehr gefunden werden können.</li>\
+    <li>Die Suche nach der nächsten Lösung oder das Springen zum Ende der Abfrage kann jederzeit<br\>\
+    	über die Abbrechen-Schaltfläche unterbrochen werden. Der Interpreter beendet hierbei<br\>\
+    	den aktuellen Schritt und hält daraufhin an</li>\
   </ul>\
 </html>\
